# ddi

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml
ddi/: __init__.py  cli.py  cname.py  host.py  ipv4.py  main.py  password.py  subnet.py  utilites.py
tests/: test_cli.py  test_cname.py  test_host.py  test_utilities.py
tests/cassettes/: cli_cname_add.json  cli_cname_delete.json  cli_cname_info.json  cli_host_add.json  cli_host_add_ip.json  cli_host_add_subnet.json  cli_host_delete.json  cli_host_info.json  cli_ipv4_info.json  cli_subnet_info.json  ddi_add_cname.json  ddi_add_host.json  ddi_delete_cname.json  ddi_delete_host.json  ddi_get_cname.json  ddi_get_free_ipv4.json  ddi_get_host.json  ddi_get_ipv4.json  ddi_get_subnet.json
tests/integration/: test_cli_cli.py  test_cname_cli.py  test_host_cli.py  test_ipv4_cli.py  test_password_cli.py  test_subnet_cli.py
tests/integration/cassettes/: ddi_add_cname.json  ddi_add_host.json  ddi_delete_cname.json  ddi_delete_host.json  ddi_get_cname.json  ddi_get_host.json
tests/unit/: test_cname.py  test_host.py  test_ipv4.py  test_subnet.py
