[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ddi"
author = "Erinn Looney-Triggs"
author-email = "erinn.looneytriggs@gmail.com"
home-page = "https://github.com/erinn/ddi/"
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
requires = [
    "click",
    "colorama",
    "netaddr",
    "pyjsend",
    "pyyaml",
    "requests",
    "secretstorage",
]

[tool.flit.scripts]
ddi = "ddi.main:main"
