[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ddi"
author = "Erinn Looney-Triggs"
author-email = "erinn.looneytriggs@gmail.com"
home-page = "https://github.com/erinn/ddi/"
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
requires = [
    "click",
    "colorama",
    "keyring",
    "netaddr",
    "pyjsend",
    "pyyaml",
    "requests",
    "secretstorage",
    "url-normalize",
]

[tool.flit.scripts]
ddi = "ddi.main:main"
